2020-09-03  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_internal_authenticate): Remove checking
	against EDDSA_HASH_LEN_MAX.
	(cmd_pso): Likewise.

2020-08-28  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_reset_user_password): Add passphrase length
	check.

2020-08-26  NIIBE Yutaka  <gniibe@fsij.org>

	* src/ac.c (verify_user_0): Fix for a use case of having
	signing key only.
	(verify_admin_00): Clean up.

	* tests/test_000_empty_card.py (test_name_lang_sex): Support
	OpenPGP card version 3.3.

2020-01-24  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.15.

2020-01-11  Bertrand Jacquin <bertrand@jacquin.bzh>

	* tool/add_openpgp_authkey_from_gpgssh.py: Switch to Python3.
	* tool/calc_precompute_table_ecc.py: Likewise.
	* tool/dfuse.py: Likewise.
	* tool/dump_mem.py: Likewise.
	* tool/get_raw_public_key.py: Likewise.
	* tool/pageant_proxy_to_gpg.py: Likewise.

2019-12-30  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 1.18.

2019-06-18  NIIBE Yutaka  <gniibe@fsij.org>

	* src/bn.c (bn256_random): More portable.

2019-04-03  NIIBE Yutaka  <gniibe@fsij.org>

	* tests: Factor out tests into classes.

2019-03-04  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.14.

	* chopstx: Update to 1.14.

	* tool/gnuk_token.py: Add 1209:2440.

2019-02-24  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb-ccid.c (ccid_thread): Clean up the ack button state
	at reset (by SET_INTERFACE).

	* tool/gnuk_token.py (gnuk_token.__init__): Add back
	setAltInterface to issue SET_INTERFACE control transfer.

2019-02-22  NIIBE Yutaka  <gniibe@fsij.org>

	* tool/gnuk_get_random.py: New.

	* src/openpgp.c (cmd_external_authenticate): move
	ACKBTN_SUPPORT to...
	(cmd_get_challenge): ... here.

	* src/gnuk.h (EV_*): Change the values.

	* src/usb-ccid.c (GPG_ACK_TIMEOUT): New.
	(ccid_thread): Implement timout for the user interaction.

2019-02-21  NIIBE Yutaka  <gniibe@fsij.org>

	* GNUK_USB_DEVICE_ID: Add 1209:2440.

2018-12-26  NIIBE Yutaka  <gniibe@fsij.org>
